<resources>
    <string name="app_name">COURTAINS</string>
    <string name="text_Username">Username</string>
    <string name="text_Password">Password</string>
    <string name="text_Login">Login</string>
    <string name="text_Exit">Exit</string>
    <string name="hint_username">email@example.com</string>
    <string name="hint_password">Your password here</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_error">ERROR</string>
    <string name="text_error_message">Invalid User or Password</string>
    <string name="text_action_search">Search</string>
    <string name="text_action_settings">Settings</string>
    <string name="text_action_logout">Logout</string>
    <string name="text_action_compras">Shopping</string>
    <string name="text_action_nav">Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>