<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/text_action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/text_action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_nav"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/text_action_nav" />
    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/text_action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_compras"
        android:icon="@android:mipmap/sym_def_app_icon"
        android:title="@string/text_action_compras"
        app:showAsAction="always" />
</menu>